Money Manager 21.4.2
* javafx-swing dependency moved to test scope
* Preview features removed
* About dialog redesigned